[package]
name = "reconciliation"
version = "0.1.0"
edition = "2021"
authors = ["Abraham Kamau <kirumba.kamau@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
serde_json = "1.0.93"
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "2.0.3", features = ["postgres", "64-column-tables", "128-column-tables", "chrono"] }
serde = { version = "1.0.152", features = ["derive"] }
csv = "1.2.0"
